Обновил README с описанием проекта

--- a/cardhero.html
+++ b/cardhero.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Карта героя</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="hero-card">
+        <img src="hero-card.jpg" alt="Железный человек">
+        <h2>Железный человек</h2>
+        <p>Миллиардер-изобретатель Тони Старк попадает в плен к Афганским террористам, которые пытаются заставить его создать оружие массового поражения. В тайне от своих захватчиков Старк конструирует высокотехнологичную киберброню, которая помогает ему сбежать. Однако по возвращении в США он узнаёт, что в совете директоров его фирмы плетётся заговор, чреватый страшными последствиями. Используя своё последнее изобретение, Старк пытается решить проблемы своей компании радикально...</p>
+        <button class="hero-btn">Подробнее</button>
+      </div>
+</body>
